<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="facebook_app_id" translatable="false">258609118359567</string>
    <string name="fb_login_protocol_scheme" tools:ignore="ExtraTranslation">fb258609118359567</string>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>
    <string name="app_name">KES</string>
    <string name="label_masuk">Masuk</string>
    <string name="label_registrasi">Registrasi</string>
    <string name="label_daftar_public">Daftar</string>
    <string name="label_daftar_orangtua">Daftar Orangtua</string>
    <string name="label_pemindaian_nik">Pemindaian Scan NIK</string>
    <string name="label_forgot_pass">Lupa Kata Sandi</string>
    <string name="label_akses_anak">Akses Siswa</string>
    <string name="label_recommend_school">Rekomendasikan Sekolah</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="error_resp_json">Internet bermasalah, coba lagi</string>
    <string name="error_resp_internet_con">Tidak ada koneksi internet, periksa dan hubungkan kembali</string>
    <string name="toast_cancel">Batalkan</string>
    <string name="tv_lupa_pass">Lupa Kata Sandi?</string>
    <string name="tv_info_pass">Kami memerlukan email anda yang terdaftar untuk mengirimikan instruksi pengaturan ulang kata sandi</string>
    <string name="btn_ubah_pass">Ubah Kata Sandi</string>
    <string name="btn_masuk">Masuk</string>
    <string name="btn_masuk_sebagai_tamu">Masuk Sebagai Tamu</string>
    <string name="btn_daftar">Daftar</string>
    <string name="tv_slogan">Temukan Sekolahmu Disini</string>
    <string name="tv_recommand_info">Untuk dapat menggunakan sistem KES, silahkan bergabung dengan cara merekomendasikan sekolah anda ke KES</string>
    <string name="tv_belum_recommand_info">Sekolah anda belum terhubung dengan KES? Ayo! rekomendasikan sekolahmu dan biarkan KES memantau perkembangan anak anda</string>
    <string name="tv_sudah_recommand_info">Anda telah merekomendasikan sekolah ini untuk bergabung dengan KES, Untuk infomasi selanjutnya kan dikirimkan ke email anda</string>
    <string name="btn_rekomendasikan">Rekomendasikan Sekolah Dengan KES</string>
    <string name="btn_share">Ajak orang lain untuk merekomendasikan</string>
    <string name="tv_recommend_masuk">Sudah punya akun? </string>
    <string name="btn_recommend_masuk">Masuk</string>
    <string name="btn_facebook_daftar">Daftar dengan Facebook</string>
    <string name="btn_google_daftar">Daftar dengan Google</string>
    <string name="btn_email">E-mail</string>
    <string name="btn_orangtua">Orangtua</string>
    <string name="btn_facebook">Masuk dengan Facebook</string>
    <string name="btn_google">Masuk dengan Google</string>
    <string name="tv_recommend_daftar">Sudah punya akun? </string>
    <string name="btn_recommend_daftar">Daftar</string>
    <string name="tv_lupa_kata_sandi">Lupa Kata Sandi?</string>
    <string name="tv_atau">Atau</string>
    <string name="hnt_email">E-mail</string>
    <string name="hnt_pass">Kata Sandi</string>
    <string name="tv_pilihan" translatable="false">Pilihan Bahasa</string>
    <string name="tv_bahasa">Indonesia</string>
    <string name="tv_toolbar">Pengaturan</string>
    <string name="tv_info_akses_anak">Kode akses akan dikirimkan melalui email yang terdaftar pada sekolah, bila email yang anda gunakan berbeda dengan email yang terdaftar pada sekolah mohon hubungi kami</string>
    <string name="et_nama_kode_sekolah">Nama / Kode Sekolah</string>
    <string name="et_nama_nik_niora">NIK / NIORA Anak</string>
    <string name="btn_minta_kode_akses">Minta Kode Akses</string>
    <string name="validate_nama_kode_sekolah">* Mohon isi nama sekolah / kode sekolah</string>
    <string name="validate_nik_niora_anak">* Masukan NIK / NIORA</string>
    <string name="validate_sekolah_code">* Nama sekolah / kode sekolah tidak ditemukan</string>
    <string name="tv_nama_anak_info">Nama anak anda</string>
    <string name="validate_nik_niora">* NIK / NIORA tidak ditemukan</string>
    <string name="validate_nik_niora_ortu">* NIK / NIORA anak tidak cocok dengan orangtua</string>
    <string name="btn_submit">submit</string>
    <string name="tv_kode_aa_label">Verifikasi Kode</string>
    <string name="tv_kode_aa_info">Mohon masukan kode akses yang telah kami kirimkan ke email anda</string>
    <string name="tv_kode_aa_label2">Data Siswa</string>
    <string name="validate_kode_aa">* Masukan kode verifikasi terlebih dahulu</string>
    <string name="et_nama_lengkap">Nama Lengkap</string>
    <string name="et_nik">NIK / NIORA</string>
    <string name="et_email">Alamat Email</string>
    <string name="et_number_handphone">Nomor Handphone</string>
    <string name="et_kata_sandi">Kata Sandi</string>
    <string name="et_ulangi_kata_sandi">Ulangi Kata Sandi</string>
    <string name="et_hubungan">Hubungan</string>
    <string name="btn_ayah">Ayah</string>
    <string name="btn_ibu">Ibu</string>
    <string name="btn_wali">Wali</string>
    <string name="rb_laki_laki">Laki - Laki</string>
    <string name="rb_perempuan">Perempuan</string>
    <string name="btn_buat_akun">Buat Akun</string>
    <string name="hub_ayah">Ayah</string>
    <string name="hub_ibu">Ibu</string>
    <string name="hub_wali">Wali</string>
    <string name="validate_fullname">* Mohon isi nama lengkap anda</string>
    <string name="validate_nik">* Masukan NIK / NIORA anda</string>
    <string name="validate_email">* Email tidak sesuai</string>
    <string name="validate_mobile_phone">* Masukan nomor handphone anda</string>
    <string name="validate_nomor_rumah">* Masukkan nomor rumah anda</string>
    <string name="validate_pass">* Masukan kata sandi anda</string>
    <string name="validate_pass_lengh">* Minimal 6 karakter</string>
    <string name="validate_number_lengh">* Minimal 10 karakter</string>
    <string name="validate_nik_lengh">* Harus dalam 16 karakter</string>
    <string name="validate_cpass">* Kata sandi sama, periksa kembali</string>
    <string name="validate_hubungan">* Mohon Pilih Hubungan Anda</string>
    <string name="validate_name_depan">* Mohon isi nama depan anda</string>
    <string name="validate_name_belakang">* Mohon isi nama belakang anda</string>
    <string name="validate_tempat_lahir">* Masukan tempat lahir anda</string>
    <string name="validate_tanggal_lahir">* Masukan tanggal lahir anda</string>
    <string name="validate_negara">* Masukkan negara asal anda</string>
    <string name="validate_kewarganegaraan">* Mohon pilih kewarganegaraan anda</string>
    <string name="validate_alamat_rumah">* Mohon masukkan alamat rumah anda</string>
    <string name="validate2_nik">Pastikan NIK / NIORA benar, agar dapat mengakses anak anda. Bisa dengan Scan NIK dari KTP/KK</string>
    <string name="validate2_mobile_phone">Pasikan nomor ponsel anda aktif untuk keamanan dan kemudahan akses</string>
    <string name="validate2_pass_lengh">Minimal 6 karakter</string>
    <string name="tcb_ketentuan">Mohon, Disetujui terlebih dahulu</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="datadiri">Data diri<u>Underline</u></string>
    <string name="place_details">&lt;b&gt;%1$s&lt;/b&gt;&lt;br/&gt;&lt;i&gt;&lt;b&gt;%2$s&lt;/b&gt;&lt;br/&gt;&lt;i&gt;</string>
    <string name="autocomplete_hint">Enter place name or address</string>
    <string name="selected_place">Last Selected Place:</string>
    <string name="get_current_place">GET CURRENT PLACE</string>
    <string name="title_activity_menu_utama">MenuUtama</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="title_activity_menu_guest">MenuGuest</string>
    <string name="no_location_data_provided">no location</string>
    <string name="service_not_available">no</string>
    <string name="invalid_lat_long_used">sda</string>
    <string name="no_address_found">no Address</string>
    <string name="action_hide">Hide Panel</string>
    <string name="action_show">Show Panel</string>
    <string name="action_anchor_enable">Enable Anchor Point</string>
    <string name="action_anchor_disable">Disable Anchor Point</string>
    <string name="rb_sd">SD</string>
    <string name="rb_smp">SMP</string>
    <string name="rb_smk">SMK</string>
    <string name="rb_sma">SMA</string>
    <string name="folows">Tamplikan</string>
    <string name="title_activity_detail">Detail</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="rb_wni">WNI</string>
    <string name="rb_wna">WNA</string>
    <string name="rb_laki">Pria</string>
    <string name="rb_wanita">Wanita</string>
    <string name="validate_alamat_kerja">* Mohon masukkan alamat kerja anda</string>
    <string name="validate_penghasilan">* Mohon penghasilan anda</string>
    <string name="validate_pendidikan">* Mohon masukkan pendidikan anda</string>
    <string name="validate_jabatan">* Mohon masukkan jabatan anda</string>
    <string name="validate_nama_perusahaan">* Mohon masukkan nama perusahaan anda</string>
    <string name="permission_dialog">Accessing Location Permissions required</string>
    <string name="go_to_permissions_settings">Go to App settings and enable permissions</string>
    <string name="rb_pria">Pria</string>
    <string name="kontak">Kontak</string>
    <string name="pengaturan">Pengaturan</string>
    <string name="masuk">Masuk</string>
    <string name="cari_sekolah">Cari Sekolah</string>
    <string name="beranda">Beranda</string>
    <string name="tentang_kami">Tentang Kami</string>
    <string name="khronos">KES</string>
    <string name="informasi_mengenai_data_diri_anak_anda">Informasi mengenai data diri anak anda</string>
    <string name="data_anak">Data Anak</string>
    <string name="informasi_kontak_anak_anda">Informasi Kontak anak anda</string>
    <string name="informasi_mengenai_alamat_tempat_tinggal_anak_anda">Informasi mengenai alamat tempat tinggal anak anda</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="fcm_message">FCM Message</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="tv_mata_pelajaran">Mata Pelajaran</string>
    <string name="tv_member_id">Memberid</string>
    <string name="tv_email">Email</string>
    <string name="tv_fullname">Fullname</string>
    <string name="tv_member_type">Member Type</string>
    <string name="tv_token">Token</string>
    <string name="btn_logout">Logout</string>
    <string name="tv_keterangan">Keterangan</string>
    <string name="tv_detail">Detail</string>
    <string name="tv_latihan_teori">Latihan Teori</string>
    <string name="tv_ulangan_harian">Ulangan Harian</string>
    <string name="tv_latihan_praktikum">Latihan Praktikum</string>
    <string name="tv_ekstrakulikuler">Ekstrakulikuler</string>
    <string name="tv_ujian_sekolah">Ujian Sekolah</string>
    <string name="tv_ujian_negara">Ujian Negara</string>
    <string name="tv_nilai_akhir">Nilai Akhir</string>
    <string name="tv_rata_rata_kelas">Rata rata kelas</string>
    <string name="tv_intro">Temukan Sekolahmu Disini</string>
    <string name="tv_credit">© 2018 Khronos Education System</string>
</resources>