<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="8dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#ffffff"
            android:shrinkColumns="1"
            android:stretchColumns="1">
            <!-- Row 3 with 2 columns -->
            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                >

                <TextView
                    android:layout_weight="1"
                    android:background="@drawable/tabel_ujian"
                    android:padding="13dip"
                    android:text="@string/tv_detail"
                    android:gravity="center"
                    android:textColor="@color/ic_logo_background" />

                <TextView
                    android:layout_weight="1"
                    android:background="@drawable/tabel_ujian"
                    android:padding="13dip"
                    android:text="@string/tv_keterangan"
                    android:gravity="center"
                    android:textColor="@color/ic_logo_background" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/tabel_border"
                    android:padding="13dip"
                    android:text="@string/tv_mata_pelajaran"
                    android:gravity="center"
                    android:textColor="#000000" />
                </LinearLayout>

                <TextView
                    android:id="@+id/mapel_raport"
                    android:layout_weight="1"
                    android:background="@drawable/tabel_border"
                    android:padding="13dip"
                    android:text=""
                    android:gravity="center"
                    android:textColor="#000000" />
            </TableRow>
            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal">

                <TextView
                    android:layout_weight="1"
                    android:background="@drawable/tabel_border"
                    android:padding="13dip"
                    android:text="@string/tv_latihan_teori"
                    android:gravity="center"
                    android:textColor="#000000" />

                <TextView
                    android:id="@+id/nilai_teori"
                    android:layout_weight="1"
                    android:background="@drawable/tabel_border"
                    android:padding="13dip"
                    android:text=""
                    android:gravity="center"
                    android:textColor="#000000" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal">

                <TextView
                    android:layout_weight="1"
                    android:background="@drawable/tabel_border"
                    android:padding="13dip"
                    android:text="@string/tv_ulangan_harian"
                    android:gravity="center"
                    android:textColor="#000000" />

                <TextView
                    android:id="@+id/ulangan_harian"
                    android:layout_weight="1"
                    android:background="@drawable/tabel_border"
                    android:padding="13dip"
                    android:text=""
                    android:gravity="center"
                    android:textColor="#000000" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal">

                <TextView
                    android:layout_weight="1"
                    android:background="@drawable/tabel_border"
                    android:padding="13dip"
                    android:text="@string/tv_latihan_praktikum"
                    android:gravity="center"
                    android:textColor="#000000" />

                <TextView
                    android:id="@+id/latihan_praktikum"
                    android:layout_weight="1"
                    android:background="@drawable/tabel_border"
                    android:padding="13dip"
                    android:text=""
                    android:gravity="center"
                    android:textColor="#000000" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal">

                <TextView
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"
                    android:background="@drawable/tabel_border"
                    android:padding="13dip"
                    android:text="@string/tv_ekstrakulikuler"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:textColor="#000000" />

                <TextView
                    android:id="@+id/eskul"
                    android:layout_weight="1"
                    android:background="@drawable/tabel_border"
                    android:padding="13dip"
                    android:text=""
                    android:gravity="center"
                    android:textColor="#000000" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal">

                <TextView
                    android:layout_weight="1"
                    android:background="@drawable/tabel_border"
                    android:padding="13dip"
                    android:text="@string/tv_ujian_sekolah"
                    android:gravity="center"
                    android:textColor="#000000" />

                <TextView
                    android:id="@+id/ujian_sekolah"
                    android:layout_weight="1"
                    android:background="@drawable/tabel_border"
                    android:padding="13dip"
                    android:gravity="center"
                    android:text=""
                    android:textColor="#000000" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/tabel_border"
                    android:padding="13dip"
                    android:layout_weight="1"
                    android:text="@string/tv_ujian_negara"
                    android:gravity="center"
                    android:textColor="#000000" />

                <TextView
                    android:id="@+id/ujian_negara"
                    android:layout_weight="1"
                    android:background="@drawable/tabel_border"
                    android:padding="13dip"
                    android:gravity="center"
                    android:text=""
                    android:textColor="#000000" />
            </TableRow>
            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/tabel_border"
                    android:padding="13dip"
                    android:layout_weight="1"
                    android:text="@string/tv_nilai_akhir"
                    android:gravity="center"
                    android:textColor="#000000" />

                <TextView
                    android:id="@+id/nilai_akhir"
                    android:layout_weight="1"
                    android:background="@drawable/tabel_border"
                    android:padding="13dip"
                    android:gravity="center"
                    android:text=""
                    android:textColor="#000000" />
            </TableRow>
            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/tabel_border"
                    android:padding="13dip"
                    android:layout_weight="1"
                    android:text="@string/tv_rata_rata_kelas"
                    android:gravity="center"
                    android:textColor="#000000" />

                <TextView
                    android:id="@+id/rata_rata"
                    android:layout_weight="1"
                    android:background="@drawable/tabel_border"
                    android:padding="13dip"
                    android:gravity="center"
                    android:text=""
                    android:textColor="#000000" />
            </TableRow>
        </TableLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>